<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="ifRoom"
        android:id="@+id/menu"
        android:icon="@drawable/icon_menu2"
        android:title="@string/menu">

        <menu>
            <item
                app:showAsAction="never"
                android:id="@+id/send_list"
                android:orderInCategory="100"
                android:title="@string/send_list"/>

            <item
                app:showAsAction="never"
                android:id="@+id/select_all"
                android:orderInCategory="200"
                android:title="@string/select_all"/>

            <item
                app:showAsAction="never"
                android:id="@+id/unselect_all"
                android:orderInCategory="300"
                android:title="@string/unselect_all"/>

            <item
                app:showAsAction="never"
                android:id="@+id/delete_selected"
                android:orderInCategory="400"
                android:title="@string/delete_selected"/>

        </menu>
    </item>
</menu>